# goTeacher

./: .gitignore  README.md  pyproject.toml  roadmap.md
src/goteacher/: cache.py  cli.py  config.py  doctor.py  output.py  profile.py  setup.py
src/goteacher/analysis/: normalize.py  schema.py
src/goteacher/katago/: engine.py  protocol.py
src/goteacher/models/: registry.py
src/goteacher/sgf/: replay.py
src/goteacher/teaching/: scoring.py
testdata/: example.sgf
tests/: test_profile.py  test_protocol.py  test_setup.py  test_sgf.py  test_teaching.py
