[project]
name = "goteacher"
version = "0.1.0"
description = "KataGo-powered Go teaching CLI for agents"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "platformdirs>=4.2",
    "pydantic>=2.7",
    "sgfmill>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[project.scripts]
goteacher = "goteacher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
